fix: :bug: remove dark mode styles from body in app.css

--- a/src/app.css
+++ b/src/app.css
@@ -5,5 +5,5 @@
 }
 
 body {
-  @apply dark:text-white touch-manipulation overflow-hidden dark:bg-[#24292F];
+  @apply text-white touch-manipulation overflow-hidden;
 }
